# sphinx-opensearch

./: .gitignore  AUTHORS  ChangeLog  README.md  requirements.txt  setup.cfg  sphinx_import.py  tox.ini  zuul.yaml
sphinx_opensearch/: __init__.py  sphinxsearch.py
sphinx_opensearch/common/: clients.py
sphinxsearch/: __init__.py  sphinxsearch.py
sphinxsearch/common/: clients.py
