[metadata]
name = sphinxsearch
summary = Python program to index Sphinx-based documentations into Elasticsearch or Opensearch
description_file =
    README.rst
author = Open Telekom Cloud - Ecosystem Squad
author_email = dl-pbcotcdeleco@t-systems.com
home_page = https://github.com/opentelekomcloud/python-sphinxsearch
classifier =
    Intended Audience :: Information Technology
    Intended Audience :: System Administrators
    License :: OSI Approved :: Apache Software License
    Operating System :: POSIX :: Linux
    Programming Language :: Python
    Programming Language :: Python :: 2
    Programming Language :: Python :: 2.7
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.6
    Programming Language :: Python :: 3.7
keywords =
    Sphinx, search, python

[files]
packages =
  otcextensions

[entry_points]
console.scripts =
  sphinxsearch = sphinxsearch:main