[metadata]
name = sphinxsearch
author = Open Telekom Cloud - Ecosystem Squad
author_email = dl-pbcotcdeleco@t-systems.com
description = Python program to index Sphinx-based documentations into Elasticsearch or Opensearch
long_description = file: README.md
long_description_content_type = text/markdown
home_page = https://github.com/opentelekomcloud/python-sphinxsearch
classifier =
    License :: OSI Approved :: Apache Software License
    Operating System :: POSIX :: Linux
    Operating System :: Unix
    Operating System :: MacOS
    Programming Language :: Python
    Programming Language :: Python :: 2
    Programming Language :: Python :: 2.7
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.6
    Programming Language :: Python :: 3.7
keywords = Sphinx, search, python

[options]
packages = sphinxsearch

[entry_points]
console.scripts =
  sphinxsearch = sphinxsearch:main