[metadata]
name = sphinx-opensearch
author = Open Telekom Cloud - Ecosystem Squad
author_email = dl-pbcotcdeleco@t-systems.com
description = Python program to index Sphinx-based documentations into Elasticsearch or Opensearch
description_file =
    README.md
home_page = https://github.com/opentelekomcloud/sphinx-opensearch
classifier =
    License :: OSI Approved :: Apache Software License
    Operating System :: POSIX :: Linux
    Operating System :: Unix
    Operating System :: MacOS
    Programming Language :: Python
    Programming Language :: Python :: 2
    Programming Language :: Python :: 2.7
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.6
    Programming Language :: Python :: 3.7
keywords = Sphinx, search, python

[options]
packages = sphinx_opensearch

[options.entry_points]
console_scripts =
  sphinxsearch = sphinx_opensearch:main
